# city-list

./: .gitignore  Dockerfile  Gemini.md  README.md  design_plan.md  docker-compose.yml  launch-dev.sh  manage.py  place-migration-readme.md  pyproject.toml  run_lint.sh  run_tests.sh
.github/: dependabot.yml
.github/workflows/: lint.yml  tests.yml
api/: serializers.py  urls.py  views.py
city_list_project/: asgi.py  settings.py  urls.py
pages/: tests.py  urls.py  views.py
pages/templates/pages/: map.html
places/: admin.py  factories.py  models.py  tests.py
places/migrations/: 0001_initial.py  0003_location_business_location.py  0004_populate_locations.py  0005_remove_business_latitude_remove_business_longitude_and_more.py
places/templates/places/: business_detail.html  business_list.html
places/tests/: test_models.py
src/: launch-dev.sh  main.py
src/api/: serializers.py  tests.py  urls.py  views.py
src/city_list_project/: settings.py  urls.py  wsgi.py
src/pages/: tests.py  urls.py  utils.py  views.py
src/pages/templates/pages/: map.html
src/places/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py  widgets.py
src/places/management/commands/: fetch_bars.py  fetch_places.py
src/places/migrations/: 0002_alter_business_options.py  0006_importedplace.py  0007_importedplace_location.py
src/places/templates/places/: business_detail.html  business_group_detail.html  business_list.html  convert_imported_place.html
src/places/tests/: test_models.py
src/static/css/: style.css
src/templates/: base.html
(+1 files in other folders)
