[project]
name = "city-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "overpy>=0.7",
    "psycopg>=3.2.9",
]

[dependency-groups]
dev = [
    "djangorestframework>=3.16.0",
    "djlint>=1.36.4",
    "drf-spectacular>=0.28.0",
    "factory-boy>=3.3.3",
    "ruff>=0.12.3",
]
